# vtlengine

./: .coveragerc  .flake8  .gitignore  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Pipfile  README.md  SECURITY.md  agg1_vtl_sql_mapping.md  compare_results.py  creating.py  main.py  poetry.toml  pyproject.toml  requirements.txt  test_representations.py  testing_memory.py
.claude/: CLAUDE.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.md  documentation.yml  feature_request.md  feature_request.yml  question.md  question.yml  task.md  task.yml
.github/workflows/: ci.yml  codeql.yml  create-release.yml  docs.yml  release.yml  testing.yml  ubuntu_test_24_04.yml  version.yml
API/: Api.py  _InternalApi.py  __init__.py
AST/: ASTConstructor.py  ASTEncoders.py  ASTTemplate.py  ASTVisitor.py  DLModifier.py  VtlVisitor.py  __init__.py
AST/ASTConstructorModules/: Expr.py  ExprComponents.py  Terminals.py
AST/DAG/: __init__.py  _words.py
AST/Grammar/: parser.py  tokens.py
DataTypes/: NumericTypesHandling.py  TimeHandling.py  TypePromotion.py  __init__.py
Docs/: Analytic.rst  Api.rst  Comparison.rst  General.rst  General_operation.rst  index.rst
Docs/Operators/: Aggregate Operators.rst  Numeric.rst  String.rst
Exceptions/: __init__.py  messages.py
Grammar/: lexer.py
Interpreter/: __init__.py
Model/: __init__.py
Operators/: Aggregation.py  Analytic.py  Assignment.py  Boolean.py  CastOperator.py  Clause.py  Comparison.py  Conditional.py  General.py  HROperators.py  Join.py  Numeric.py  NumericOperators.py  RegularAggregation.py  RoleSetter.py  Set.py  String.py  Time.py  Validation.py  __init__.py
Operators/docs/: conf.py
Utils/: __init__.py
development/tests/: __init__.py  test_binary_comparison.py  test_binary_general.py  test_binary_numeric.py  test_unary_numeric.py
docs/: CNAME  Walkthrough.rst  api.rst  conf.py  data_structures.rst  data_types.rst  datapoints.rst  duckdb_engine.rst  environment_variables.rst  error_messages.rst  extra_inputs.rst  index.rst  pandas_engine.rst  sdmx_inputs.rst  vtl_scripts.rst  walkthrough.rst
docs/Operators/: Aggregate Operators.rst  Analytic.rst  Comparison.rst  Conditional.rst  General.rst  General_operation.rst  Numeric.rst  String.rst
docs/_static/: DS_A_run.csv  DS_r3_run_with_multiple_vd_and_ext.csv  DS_r_run_sdmx.csv  DS_r_run_with_scalars.csv  Example_5.csv  Example_6.vtl  Example_6_input.csv  Example_6_output.csv  Example_7.json  Example_7.vtl  Example_7_2_output.csv  Example_8_output.csv  SQL_4.json  Sc_r_run_with_scalars.csv  custom.css  dataflow.xml
docs/_templates/: layout.html  versioning.html
docs/jupyterlite/: README.md  build-wheel.sh  build.sh  jupyter-lite.json  patch_lock.py
docs/plans/: 2026-01-16-hr-ast-implementation-plan.md  2026-01-16-hr-ast-refactoring-design.md  2026-01-27-versioned-documentation-design.md
docs/scripts/: build_multiversion.py  configure_doc_versions.py  generate_latest_alias.py  generate_redirect.py  version_utils.py
duckdbPerformance/: creating.py  file_generator.py  mem_gra.py
duckdbPerformance/MemoryAnalyzer/: MemAnalizer.py
duckdbPerformance/output/: .gitignore
duckdbPerformance/performance_utils/: file_generator.py  file_generator_fast.c  mem_gra.py
duckdbPerformance/test/: fusion_data.py  test_handlers.py  test_memory_usage.py  testing_memory.py  testing_memory_v2.py
files/output/: __init__.py
files/parser/: __init__.py  _rfc_dialect.py  _time_checking.py
files/writer/: __init__.py
jupyterlite/: README.md  build-wheel.sh  requirements.txt
jupyterlite/content/: vtl-demo.ipynb
scripts/: check_version.sh  configure_doc_versions.py  generate_redirect.py  setup_antlr4_runtime.sh
src/duckdb_transpiler/: dev.py  test_optimized_parser.py  test_validate.py
src/vtlengine/: __extras_check.py  __init__.py  config.py
testSuite/: Helper.py  referencemanualtests.md  referencemanualtests.py
testSuite/API/: test_api.py
testSuite/Additional/: additionaltests.py  test_additional.py  test_additional_scalars.py  tests_additional.py
testSuite/Aggregate/: test_aggregate.py
testSuite/Analytic/: test_analytic.py
testSuite/Attributes/: test_attributes.py
testSuite/BIRD/: test_BIRD.py
testSuite/Bugs/: test_bugs.py
testSuite/Calc/: test_calc.py
testSuite/Cast/: test_cast.py
testSuite/ClauseAfterClause/: test_clause_after_clause.py
testSuite/DWI/: test_dwi.py
testSuite/DataLoad/: test_dataload.py
testSuite/DatapointRulesets/: test_datapoint_rulesets.py
testSuite/Eval/: test_eval.py
testSuite/Hierarchical/: test_hierarchical.py
testSuite/IfThenElse/: test_if_then_else.py
testSuite/Joins/: test_joins.py
testSuite/ReferenceManual/: referencemanualtests.py  test_reference_manual.py
testSuite/Semantic/: test_semantic.py
testSuite/ThreeValueLogic/: test_three_value_logic.py
testSuite/TimePeriod/: test_timeperiod.py
testSuite/UDO/: test_udo.py
testSuite/Validation/: test_validation.py
tests/: Helper.py  conftest.py  pytest.ini
tests/API/: test_S3.py  test_api.py  test_error_messages_generator.py  test_sdmx.py  test_syntax_errors.py
tests/AST/: test_AST.py  test_AST_String.py
tests/Additional/: test_additional.py  test_additional_scalars.py
tests/Aggregate/: test_aggregate.py
tests/Analytic/: test_analytic.py
tests/Attributes/: test_attributes.py
tests/Bugs/: test_bugs.py
tests/Calc/: test_calc.py
tests/CaseInsensitive/: test_case_insensitive.py
tests/Cast/: test_cast.py
tests/ClauseAfterClause/: test_clause_after_clause.py
tests/Complete_VTL_Grammar/: test_grammar.py
tests/Concurrency/: test_thread_safety.py
tests/Constants/: test_constant_detection.py
tests/DAG/: test_classification.py  test_dag.py  test_scheduling.py  test_topological_sort.py
tests/DWI/: test_dwi.py
tests/DataLoad/: dataload.md  test_dataload.py
tests/DatapointRulesets/: test_datapoint_rulesets.py
tests/DateTime/: test_datetime.py
tests/DocScripts/: _rst_code_extractor.py  (+4 more)
vtl-output/: DS_A.csv
(+9430 files in other folders)
