[tool.poetry]
name = "vtlengine"
version = "1.0.3"
description = "Run and Validate VTL Scripts"
authors = ["MeaningfulData <info@meaningfuldata.eu>"]
license = "AGPL-3.0"
readme = "README.md"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Typing :: Typed"
]

keywords = ['vtl', 'sdmx', 'vtlengine', 'Validation and Transformation Language']

[tool.poetry.urls]
Repository = 'https://github.com/Meaningful-Data/vtlengine'
Documentation = 'https://docs.vtlengine.meaningfuldata.eu'
MeaningfulData = 'https://www.meaningfuldata.eu/'
IssueTracker = 'https://github.com/Meaningful-Data/vtlengine/issues'
Authors = 'https://github.com/Meaningful-Data/vtlengine/graphs/contributors'

[tool.poetry.dependencies]
python = "^3.9"
# PyPi dependencies
duckdb = "^1.1"
#numba = "^0.60.0"
s3fs = "^2025.2.0"
jsonschema = "^4.23.0"

# APT dependencies
antlr4-python3-runtime = "4.9.2"
networkx = "^2.8.8"
numexpr = "^2.9.0"
pandas = "^2.1.4"
sqlglot = "^22.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^6.0.0"
line-profiler-pycharm = "^1.2.0"
sphinx = "^7.4.7"
sphinx-rtd-theme = "^3.0.2"
mypy = "^1.14.1"
pandas-stubs = "*"
toml = "^0.10.2"
ruff = "^0.9.4"
types-jsonschema = "4.23.0.20241208"

[tool.ruff]
line-length = 100
lint.mccabe.max-complexity = 20
lint.select = [
    "B", "B9", "C", "C4", "D", "E", "F", "I", "PT", "S", "SIM", "W"
]
# TODO: check S608 (duckdb querys)
lint.ignore = ["B023", "B028", "B904", "C403", "D100", "D101", "D102", "D103", "D104", "D105",
    "D107", "D200", "D201", "D202", "D203", "D205", "D209", "D212", "D213", "D301",
    "D400", "D401", "D404", "D411", "D413", "D415", "D419", "E203", "S320", "S608"]
lint.exclude = ["*/Grammar/*"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PT006", "PT012", "PT013", "E501", "W605"]
"src/vtlengine/*" = ["E712"]

[tool.mypy]
files = "src"
exclude = "src/vtlengine/AST/.*"
disallow_untyped_defs = true
disallow_untyped_calls = true
ignore_errors = false
no_implicit_optional = true
show_column_numbers = true
strict_equality = true
strict_optional = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
warn_return_any = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
