[project]
name = "vtlengine"
version = "1.9.0rc1"
description = "Run and Validate VTL Scripts"
license = "AGPL-3.0"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "MeaningfulData", email = "info@meaningfuldata.eu"},
]
maintainers = [
    {name = "Francisco Javier Hernandez del Caño", email = "javier.hernandez@meaningfuldata.eu"},
    {name = "Alberto Hernandez del Caño", email = "alberto.hernandez@meaningfuldata.eu"},
    {name = "Mateo de Lorenzo Argeles", email = "mateo.delorenzo@meaningfuldata.eu"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed"
]
keywords = ['vtl', 'sdmx', 'vtlengine', 'Validation and Transformation Language']

dependencies = [
    # PyPi dependencies
    "duckdb>=1.4,<1.5",
    "pysdmx[xml]>=1.15.1,<2.0",
    # APT-supported dependencies
    "jsonschema>=3.2.0,<5.0",
    "sqlglot>=22.2.0,<23.0",
    "pandas>=2.1.4,<3.0",
    "networkx>=2.8,<3.0",
    "pyarrow>=14.0,<20.0; python_version < '3.10'",
    "pyarrow>=14.0,<25.0; python_version >= '3.10' and python_version < '3.14'",
    "pyarrow>=22.0,<25.0; python_version >= '3.14'",
    "numpy>=2.0.2,<2.1; python_version < '3.10'",
    "numpy>=2.2.0,<2.5; python_version >= '3.10'",
    "psutil>=7.2,<8.0"
]

[project.urls]
Repository = 'https://github.com/Meaningful-Data/vtlengine'
Documentation = 'https://docs.vtlengine.meaningfuldata.eu'
MeaningfulData = 'https://www.meaningfuldata.eu/'
IssueTracker = 'https://github.com/Meaningful-Data/vtlengine/issues'
Authors = 'https://github.com/Meaningful-Data/vtlengine/graphs/contributors'

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

# Dependency groups follow PEP 735 (https://peps.python.org/pep-0735/).
[dependency-groups]
dev = [
    "pytest>=9.0.3,<10.0",
    "pytest-cov>=7.1.0,<8.0",
    "coverage>=7.14.0,<8.0",
    "pytest-xdist>=3.8.0,<4.0",
    "mypy>=1.18,<2.0",
    "pyarrow-stubs>=14.0,<25.0",
    "pandas-stubs>2.1.4.231227,<2.2.3.240901; python_version < '3.10'",
    "pandas-stubs>=2.2.3.241009,<3.0.0.260204; python_version >= '3.10'",
    "ruff>=0.15.12,<1.0.0",
    "types-jsonschema>=4.25.1,<5.0",
]
docs = [
    "sphinx>=9.1.0,<10.0; python_version == '3.12'",
    "sphinx-rtd-theme>=3.0.2,<4.0; python_version == '3.12'",
    "toml>=0.10.2,<0.11.0; python_version == '3.12'",
]



[tool.ruff]
target-version = "py39"
line-length = 100
lint.mccabe.max-complexity = 20
lint.select = [
    "B", "B9", "C", "C4", "D", "E", "F", "I", "PT", "S", "SIM", "W"
]
# TODO: check S608 (duckdb querys)
lint.ignore = ["B023", "B028", "B904", "C403", "D100", "D101", "D102", "D103", "D104", "D105",
    "D107", "D200", "D201", "D202", "D203", "D205", "D209", "D212", "D213", "D301",
    "D400", "D401", "D404", "D411", "D413", "D415", "D419", "E203", "S608"]
lint.exclude = ["*/Grammar/*", "*/_cpp_parser/*", "*/main.py", "*/dev.py"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PT006", "PT012", "PT013", "E501", "W605"]
"src/vtlengine/*" = ["E712"]

[tool.mypy]
files = "src"
exclude = "src/vtlengine/AST/.*|src/dev.py"
disallow_untyped_defs = true
disallow_untyped_calls = true
ignore_errors = false
no_implicit_optional = true
show_column_numbers = true
strict_equality = true
strict_optional = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
warn_return_any = false

[[tool.mypy.overrides]]
module = "vtlengine.AST.*"
follow_imports = "silent"

[tool.pytest.ini_options]
addopts = "--strict-markers"
pythonpath = ["src"]
markers = [
    "input_path: directory where tests data files are stored"
]

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["src/vtlengine"]
wheel.exclude = [
    "vtlengine/AST/Grammar/_cpp_parser/*.cpp",
    "vtlengine/AST/Grammar/_cpp_parser/*.h",
    "lib/*",
    "include/*",
]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*"
# Skip musllinux: duckdb 1.4.x ships no musllinux wheels, so vtlengine cannot resolve deps there.
skip = "*-musllinux*"
test-requires = ["pytest"]
# Smoke test the *installed* wheel. `-o pythonpath=` empties the `["src"]` setting from
# [tool.pytest.ini_options] so `import vtlengine` resolves to site-packages (where the
# compiled vtl_cpp_parser.*.so lives) rather than the bind-mounted source at /project/src.
test-command = "pytest {project}/tests/API -x --tb=short --strict-markers -o pythonpath="
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

[tool.cibuildwheel.linux]
before-build = "bash {project}/scripts/setup_antlr4_runtime.sh"

[tool.cibuildwheel.macos]
before-build = "bash {project}/scripts/setup_antlr4_runtime.sh"

[tool.cibuildwheel.windows]
before-build = "bash {project}/scripts/setup_antlr4_runtime.sh"
